# fastapi-otel-integration

./: README.md  default-logging-config.ini  load_test_script.py  main.py  otel_utils.py  paig_os_utils.py  pyproject.toml  requirements.txt  run_with_otel.sh  server.py
otel/metrics/: custom_metrics_manager.py  fastapi_metrics_manager.py  otel_global_attributes.py  outgoing_http_metrics_manager.py
