[tool.poetry]
name = "iq-metrics-integration"
version = "0.1.0"
description = "OpenTelemetry metrics integration project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.python]
# Virtual environment configuration
venv-path = "./venv"
python-path = "./venv/bin/python"